--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="buttons">
-        <button class="all">All</button>
+        <p class="collection-para">Collections</p>
       </div>
 
       <div class="collection-body">
@@ -68,46 +68,3 @@
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
-
-
-<!-- <div class="movie-popup-header">
-          <img src="https://image.tmdb.org/t/p/w1280/jTswp6KyDYKtvC52GbHagrZbGvD.jpg" alt="">
-          <span class="playBtn"><i class="fas fa-play-circle"></i></span>
-          <div class="movie-title">
-            <h2>LUCA (<span>2021</span>)</h2>
-            <p>Sep 20 2021</p>
-          </div>
-        </div>
-        <div class="movie-popup-func">
-          <div class="watched">
-            <span><i class="fas fa-check"></i></span>
-            <p>set watched</p>
-          </div>
-          <div class="collection">
-            <span><i class="far fa-calendar-plus"></i></span>
-            <p>add to collection</p>
-          </div>
-        </div>
-  
-        <div class="movie-popup-info">
-            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi suscipit asperiores eligendi iure laudantium odio animi placeat beatae quasi sunt?</p>
-        </div>
-  
-
-        <p class="source">Source : <span> TheTVDB</span> </p>
-        <p class="date">Last Edited : <span> October 4 2021</span></p>
-
-        <div class="achievement">
-          <div class="votes">
-            <span><i class="fas fa-poll"></i></span>
-            <p><span></span> votes</p>
-          </div>
-          <div class="rating">
-            <span><i class="fas fa-star"></i></span>
-            <p><span>8</span>/10</p>
-          </div>
-        </div>
-
-        <div class="close-btn">
-          <i class="fas fa-times"></i>
-        </div> -->
