--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
         <div class="buttons">
           <button class="popular">Popular</button>
-          <button class="rated">Rated +</button>
+          <button class="rated">From 2020 +</button>
           <button class="drama">Drama 2021</button>
         </div>
         
