--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <h2 class="respond">List</h2>
         <div class="movie-body">
         </div>
+
+        <div class="nextList">
+          <button class="previous">Previous</button>
+          <button class="next">Next</button>
+        </div>
     </main>
 
     <section class="movie-popup-overlay close">
