--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 
         <div class="nextList">
           <button class="previous">Previous</button>
+          <form id="form">
+            <input type="text" id="search" placeholder="Search for movies..." autocomplete="off">
+          </form>
           <button class="next">Next</button>
         </div>
     </main>
